View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029125 | Open CASCADE | OCCT:Visualization | public | 2017-09-19 12:51 | 2018-06-29 21:19 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 7.1.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029125: Visualization, OpenGl_Text - fix access violation within OpenGL1.1 context | ||||
Description | OpenGl_Text::drawRect() does not checks OpenGL version before creating OpenGl_VertexBuffer which leads to access violation if OpenGL context does not support VBO (obsolete). | ||||
Steps To Reproduce | On Windows:pload VISUALIZATION vcaps -softMode 1 vclear vinit View1 vpoint p0 -100 0 0 vpoint p1 0 0 0 vpoint p2 100 0 0 vdimension angle -angle -shapes p0 p1 p2 Result: An exception was caught 0000027129D3AF80 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000228 during 'READ' operation ** Exception ** 0000027129D3AF80 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000228 during 'READ' operation | ||||
Tags | No tags attached. | ||||
Test case number | Not requared | ||||
|
Branch CR29125 has been created by kgv. SHA-1: c0db97be380ff7033ef7decd3dcd8629b47eb83a Detailed log of new commits: Author: kgv Date: Tue Sep 19 12:53:15 2017 +0300 0029125: Visualization, OpenGl_Text - fix access violation within OpenGL1.1 context |
|
Please test the patch. Test case is not needed. |
|
Branch CR29125 has been updated by kgv. SHA-1: d5843127382d93e0e9a3cfa75038a7fa5e0dedaf Detailed log of new commits: Author: kgv Date: Tue Sep 19 13:26:00 2017 +0300 OpenGl_Context::DiagnosticInformation() - added OpenGL version check before retrieving GL_SHADING_LANGUAGE_VERSION string. |
|
Combination - OCCT branch : CR29125 SHA-1: d5843127382d93e0e9a3cfa75038a7fa5e0dedaf Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. http://jenkins-test-10.nnov.opencascade.com/view/CR29125-master-KGV/ Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 4 (4 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29125 has been deleted by kgv. SHA-1: d5843127382d93e0e9a3cfa75038a7fa5e0dedaf |
occt: master fb025d9c 2017-09-19 09:53:15 Committer: bugmaster Details Diff |
0029125: Visualization, OpenGl_Text - fix access violation within OpenGL1.1 context OpenGl_Context::DiagnosticInformation() - added OpenGL version check before retrieving GL_SHADING_LANGUAGE_VERSION string. |
Affected Issues 0029125 |
|
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Text.cxx | Diff File | ||
occt: master 048e1b3b 2017-09-19 09:53:15 Committer: bugmaster Details Diff |
0029125: Visualization, OpenGl_Text - fix access violation within OpenGL1.1 context OpenGl_Context::DiagnosticInformation() - added OpenGL version check before retrieving GL_SHADING_LANGUAGE_VERSION string. |
Affected Issues 0029125 |
|
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Text.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-09-19 12:51 | kgv | New Issue | |
2017-09-19 12:51 | kgv | Assigned To | => kgv |
2017-09-19 12:53 | git | Note Added: 0070669 | |
2017-09-19 12:56 | kgv | Priority | normal => low |
2017-09-19 12:57 | kgv | Relationship added | child of 0028099 |
2017-09-19 12:57 | kgv | Product Version | 7.2.0 => 7.1.0 |
2017-09-19 12:58 | kgv | Relationship added | child of 0029124 |
2017-09-19 12:58 | kgv | Note Added: 0070670 | |
2017-09-19 12:58 | kgv | Assigned To | kgv => bugmaster |
2017-09-19 12:58 | kgv | Status | new => resolved |
2017-09-19 12:58 | kgv | Status | resolved => reviewed |
2017-09-19 13:26 | git | Note Added: 0070676 | |
2017-09-20 10:20 | bugmaster | Note Added: 0070703 | |
2017-09-20 10:20 | bugmaster | Status | reviewed => tested |
2017-09-20 10:24 | bugmaster | Test case number | => Not requared |
2017-09-21 19:33 | bugmaster | Changeset attached | => occt master fb025d9c |
2017-09-21 19:33 | bugmaster | Status | tested => verified |
2017-09-21 19:33 | bugmaster | Resolution | open => fixed |
2017-09-21 19:50 | apn | Target Version | 7.3.0 => 7.2.0 |
2017-09-22 12:07 | bugmaster | Target Version | 7.2.0 => 7.3.0 |
2017-09-29 13:26 | bugmaster | Changeset attached | => occt master 048e1b3b |
2017-09-29 17:12 | git | Note Added: 0071036 | |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |