0029125: Visualization, OpenGl_Text - fix access violation within OpenGL1.1 context

OpenGl_Context::DiagnosticInformation() - added OpenGL version check before retrieving GL_SHADING_LANGUAGE_VERSION string.